Colaboratory kullanılarak oluşturuldu

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMP1igif9YVaxo2234dSfrJ",
+      "authorship_tag": "ABX9TyOH+UNCsmBJmvsfu7XIYfx5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -282,15 +282,16 @@
           "height": 691
         },
         "id": "qYUnYvoqFkYj",
-        "outputId": "a9f3ff3f-3360-42ac-9c52-d2a546ccb1f0"
+        "outputId": "314be265-edc1-49fc-d3a5-bf5cfd39e4a9"
       },
       "source": [
+        "#fourier transform\n",
         "fs=250   #Sampling frequecy (Hz)\n",
         "ornekleme_araligi=1/fs\n",
         "datasize=len(x)\n",
         "print(\"datasize:\", datasize)\n",
         "fft_donusum_ax = np.fft.fft(x)\n",
-        "print(\"dönüşümün datasize'ı:\", len(fft_donusum_ax))\n",
+        "print(\"dönüşümün datasize:\", len(fft_donusum_ax))\n",
         "print(fft_donusum_ax[1])\n",
         "fft_donusum_ax = np.abs( fft_donusum_ax)\n",
         "\n",
@@ -300,14 +301,14 @@
         "plt.figure(figsize=(15,5))\n",
         "plt.plot(frekans[2:int(datasize/2)],fft_donusum_ax[2:int(datasize/2)]/datasize) "
       ],
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "datasize: 300000\n",
-            "dönüşümün datasize'ı: 300000\n",
+            "dönüşümün datasize: 300000\n",
             "(838.0582448271633+5.806164036797838j)\n"
           ]
         },
@@ -315,11 +316,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f975c4bc0d0>]"
+              "[<matplotlib.lines.Line2D at 0x7f975c45ca90>]"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
